# bazel-llvm-plugin

./: .gitignore  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
bazel/: available_llvm_versions.bzl  llvm_repos.bzl  utils.bzl
src/: BUILD  plugin.cpp
tests/: BUILD  hello.c  lit.cfg.py
